--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-<!--    <link rel="manifest" href="./manifest.json" />-->
+        <link crossorigin rel="manifest" href="./manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -36,6 +36,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>SendSafely Auth</title>
+<!--    <base href="./" />-->
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
